fix: prevent horizontal scrollwheel from showing due to footer bleed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1009,8 +1009,7 @@ body.theme-dark .hero-social--theme .icon-dark {
 
 .site-footer {
     margin-top: 4rem;
-    width: 100vw;
-    margin-left: calc(50% - 50vw);
+    margin-inline: calc(-1 * clamp(1rem, 10%, 10rem));
     padding: 2rem calc(1rem + 10vw) 3rem;
     border-top: 1px solid hsla(288, 30%, 20%, 0.1);
     background-color: hsl(60, 25%, 97%);
@@ -1048,6 +1047,10 @@ body.theme-dark .hero-social--theme .icon-dark {
 @media screen and (max-width: 1024px) {
     .body-container {
         padding: 0 1rem;
+    }
+
+    .site-footer {
+        margin-inline: -1rem;
     }
 
     section {
